# my-jupyterlite-mwe-addon

./: README.md  pyproject.toml
src/my_jupyterlite_mwe_addon/: __init__.py
